# first-test-sdmmc

./: Cargo.toml  notes  rust-toolchain.toml
.cargo/: config.toml
