[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Nobody_Nowhere <63668759+rand12345@users.noreply.github.com>"]
name = "first-test"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[features]
default = ["defmt"]
defmt = []

[dependencies]
anyhow = {version = "1.0.68", default-features = false}
nb = "1"
bxcan = "0.7.0"
embedded-hal = "0.2.7"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.2"
defmt = {version = "0.3.2", features =["alloc"]}
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2"
embassy-sync = {git = "https://github.com/embassy-rs/embassy.git"}
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev= "9e81f7dd4a9101cf52c309c1e526a9fda0f72545",features = ["embedded-sdmmc", "nightly", "unstable-traits", "defmt", "stm32f429zi", "unstable-pac", "memory-x", "time-driver-any", "exti"]  } # version = "0.1.0", 
embassy-time = "0.1.0"
can-bit-timings= "1.1.0"
kangoo_battery = {git = "https://github.com/rand12345/kangoo_battery.git", branch = "testing", feature="defmt"}
embedded-alloc = "0.5.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev= "9e81f7dd4a9101cf52c309c1e526a9fda0f72545", features = ["defmt", "integrated-timers"]  } # version = "0.1.0", rev = "255f5cb3db6b928578b94f22c3f00da601807475",
# embedded-sdmmc-async = { git = "https://github.com/ninjasource/embedded-sdmmc-rs.git", branch = "add-async-support", features = ["defmt-log"], default-features = false }
embedded-hal-async = { version = "=0.2.0-alpha.0"}
# embedded-hal = "0.2.7"
# embedded-sdmmc = {git = "https://github.com/pferreir/embedded-sdmmc-rs.git", branch= "async-new",  features = ["defmt-log"], default-features = false }
heapless = "0.7"
static_cell = "1.0.0"
embassy-futures = { version = "0.1.0", features = ["defmt"]}

embedded-sdmmc = {git = "https://github.com/embassy-rs/embedded-sdmmc-rs.git", rev = "46d1b1c2ff13e31e282ec1e352421721694f126a", feature = ["defmt-info", "defmt-warn", "defmt-error"]}

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
